# event-driven-trading-rs

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
src/: error.rs  lib.rs  main.rs
src/config/: env_config.rs  exchange_config.rs  mod.rs  strategy_config.rs
src/engine/: bus.rs  event.rs  event_loop.rs  mod.rs
src/execution/: engine.rs  fill.rs  mod.rs  order.rs
src/instrument/: instrument.rs
src/market_data/: binance_fetcher.rs  bybit_fetcher.rs  event.rs  exchange_factory.rs  fetcher.rs  fetcher_trait.rs  mod.rs  monitor.rs  normalizer.rs  resilient_fetcher.rs
src/portfolio/: portfolio.rs  position.rs
src/risk/: engine.rs  mod.rs  portfolio_limits.rs  position_sizer.rs  stop_loss.rs
src/strategy/: mean_reversion.rs  mod.rs  strategy.rs  strategy_factory.rs
src/utils/: clock.rs
