[package]
name = "event-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
async-trait = "0.1"
dotenv = "0.15"
